# test_fabrica_v

./: README.md  docker-compose.yaml  pyproject.toml  pytest.ini
app/main/: celery.py  settings.py  urls.py
app/sheduler_app/: apps.py  models.py  permissions.py  serializer.py  services.py  tasks.py  urls.py  views.py
app/sheduler_app/migrations/: 0001_initial.py  0002_filtercode_filtertag_tagforclient_remove_client_tag_and_more.py  0003_alter_operatorcode_code.py  0004_alter_client_phone_number.py  0005_alter_client_timezone_and_more.py
tests/: conftest.py
tests/api/: test_user_crud.py
